--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ dist
 .parcel-cache
 plan.txt
 flowchart.drawio
+forkify-flowchart-part-1.png
+forkify-flowchart-part-2.png
+forkify-flowchart-part-3.png
