--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ flowchart.drawio
 forkify-flowchart-part-1.png
 forkify-flowchart-part-2.png
 forkify-flowchart-part-3.png
+forkify-architecture-recipe-loading.png
